install/base/testapp/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
spec:
  selector:
    matchLabels:
      app: sites-www
      version: v1
  template:
    metadata:
      labels:
        app: sites-www
        version: v1
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: production
        image: docker.pkg.github.com/brudi/sites/sites-www:latest
        name: sites-www
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: registry
