install/base/testapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www
spec:
  ports:
  - name: http
    port: 3000
  selector:
    app: sites-www
    version: v1
